testsuite/tests/module/mod138.stderr

mod138.hs:7:5: error: Variable not in scope: isLatin1
