testsuite/tests/module/mod138.hs
-- !!! Re-exporting alias which maps to multiple mods; some qualified.
module M  where 

import Mod138_A

x = zipWith5
y = isLatin1


